--- a/_source/_includes/nav.html
+++ b/_source/_includes/nav.html
@@ -1,32 +1,29 @@
-<nav class="top-bar">
-  <ul class="title-area">
-    <!-- Title Area -->
-    <li class="name">
-      <h1><a href="#">{{ site.title }}</a></h1>
-    </li>
-    <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
-  </ul>
 
-  <section class="top-bar-section">
-    <!-- Left Nav Section -->
-    <ul class="left">
-    </ul>
+    <h1 class="inline"><a href="#">{{ site.title }}</a></h1>
 
-    <!-- Right Nav Section -->
-    <ul class="right">
-      <li>
+    <ul class="inline">
+      <li class="inline">
         <a href="index.html">Home</a>
       </li>
-      <li>
-        <a href="page1.html">page1</a>
+      <li class="inline">
+        <a href="category.html">Empowering Employees</a>
       </li>
-      <li>
-        <a href="page2.html">page2</a>
+      <li class="inline">
+        <a href="category.html">Business Smarts</a>
       </li>
-      <li>
-        <a href="page3.html">page3</a>
+      <li class="inline">
+        <a href="category.html">Our Amazing People</a>
       </li>
     </ul>
-  </section>
-</nav>
+
+    <div class="right two tablet-full mobile-full"> 
+      <div class="section row row-one">
+        <div class="eight col">
+          <input class="twelve">
+        </div>
+        <div class="four col">
+          <button>
+        </div>
+      </div>
+      
+    </div>
