--- a/_source/_layouts/default.html
+++ b/_source/_layouts/default.html
@@ -1,49 +1,48 @@
 <!DOCTYPE html>
-
-<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
-<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
-<!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<html lang="en" class="no-js">
 <head>
-  <meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
-
-  <!-- Set the viewport width to device width for mobile -->
-  <meta name="viewport" content="width=device-width" />
+  <meta charset="utf-8">
 
   <title>{{ site.title }}{{ page.title }}</title>
 
-  <!-- CSS Files -->
+
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="stylesheet" href="assets/css/foundation.min.css">
   <link rel="stylesheet" href="assets/css/app.css">
-
-  <script src="assets/js/modernizr.foundation.js"></script>
-
+  <!--[if lt IE 9]>
+    <script src="js/shiv.js"></script>
+  <![endif]-->
 </head>
-	<body>
+<body>
 		
-<!-- Whole Body Div -->
 <div class="row">
-<div class="twelve columns centered">
-
 
 {% include nav.html %}
+  
 
-<!-- Main page content -->
-<div id="wrapper">
-
-
-	{{ content }}	
-
-
-<!-- end wrapper -->	
 </div>
+
+
+<div class="row">
+
+ 
+  {{ content }} 
+
+
+<!-- end container -->	
+</div>
+
+<div class="row">
 
 {% include footer.html %}
 
-  <!-- End Whole-Body Div -->
-  </div>
 </div>
 
-  <!-- Included JS Files (Compressed) -->
+<!-- End Whole-Body Div -->
+
+  
   <!-- Included JS Files (Compressed) -->
   <script src="assets/js/jquery.js"></script>
   <script src="assets/js/foundation.min.js"></script>
@@ -51,7 +50,12 @@
   <!-- Initialize JS Plugins -->
   <script src="assets/js/app.js"></script>
 
+  
+    <script>
+    $(window).load(function(){
+      $("#featured").orbit();
+    });
+    </script> 
+  
+
 </body>
-</html>
-
-
