--- a/_source/_includes/nav.html
+++ b/_source/_includes/nav.html
@@ -1,29 +1,60 @@
+<div class="contain-to-grid">
+    <nav class="top-bar ">
+      <ul class='left'>
+        <!-- Title Area -->
+        <li class="name">
+          <h1>
+            <a href="#">
+              Cable Vision
+            </a>
+          </h1>
+        </li>
+        <li class="toggle-topbar"><a href="#"></a></li>
+      </ul>
+      <ul class="right column">
+        <li>
+          <input type="input" placeholder='Search...'>
+        </li>
+      </ul>
 
-    <h1 class="inline"><a href="#">{{ site.title }}</a></h1>
-
-    <ul class="inline">
-      <li class="inline">
-        <a href="index.html">Home</a>
-      </li>
-      <li class="inline">
-        <a href="category.html">Empowering Employees</a>
-      </li>
-      <li class="inline">
-        <a href="category.html">Business Smarts</a>
-      </li>
-      <li class="inline">
-        <a href="category.html">Our Amazing People</a>
-      </li>
-    </ul>
-
-    <div class="right two tablet-full mobile-full"> 
-      <div class="section row row-one">
-        <div class="eight col">
-          <input class="twelve">
-        </div>
-        <div class="four col">
-          <button>
-        </div>
-      </div>
       
-    </div>
+      <section class="column twelve">
+        <!-- Left Nav Section -->
+        <ul class="left">
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+          <li class="has-dropdown">
+            <a href="category.html">Empowering Employees</a>
+            <ul class="dropdown">
+              <li><a href="#">The 411 on...</a></li>
+              <li><a href="#">Taking Advantage Of</a></li>
+              <li><a href="#">Align My Goals</a></li>
+              <li><a href="#">Educate and Train</a></li>
+            </ul>
+          </li>
+          <li class="has-dropdown">
+            <a href="category.html">Business Smarts</a>
+            <ul class="dropdown">
+              <li><a href="#">Our Exciting Products & Technologies</a></li>
+              <li><a href="#">Around the Company</a></li>
+              <li><a href="#">Reaching our Customers</a></li>
+              <li><a href="#">Did You Know?</a></li>
+            </ul>
+          </li>
+          <li class="has-dropdown">
+            <a href="category.html">Our Amazing People</a>
+            <ul class="dropdown">
+              <li><a href="#">Hometown Heroes</a></li>
+              <li><a href="#">Top Performers and Teams</a></li>
+              <li><a href="#">Innovators</a></li>
+              <li><a href="#">Awards and Recognition</a></li>
+            </ul>
+          </li>
+        </ul>
+        <ul class="right">
+        </ul>
+      </section>
+    </nav>
+
+</div>
