--- a/_source/_includes/orbit.html
+++ b/_source/_includes/orbit.html
@@ -1,5 +1,11 @@
-<script>
-$(window).load(function(){
-  $("#featured").orbit();
-});
-</script> 
+<div id="featured">
+  <img src="http://foundation.zurb.com/images/orbit-demo/demo1.jpg" class="twelve"/>
+  <img src="http://foundation.zurb.com/images/orbit-demo/demo2.jpg" class="twelve"/>
+  <img src="http://foundation.zurb.com/images/orbit-demo/demo3.jpg" class="twelve"/>
+</div>
+<div id="featuredBullets" class="row">
+  <img class="column three mobile-one" src="http://fakeimg.pl/300x200" data-thumb="bullet.jpg" />
+  <img class="column three mobile-one" src="http://fakeimg.pl/300x200" data-thumb="bullet.jpg" />
+  <img class="column three mobile-one" src="http://fakeimg.pl/300x200" data-thumb="bullet.jpg" />
+  <img class="column three mobile-one" src="http://fakeimg.pl/300x200" data-thumb="bullet.jpg" />
+</div>
