--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,8 @@
 // Foundation Features
 // =============
 
+@import "compass";
+
 @import "compass/css3";
 
 @import "modular-scale";
@@ -18,3 +20,13 @@
 
 // Media Queries Overrides
 @import "foundation/components/modules/mqueries";
+
+@import "atriangle/afix/override";
+
+@import "atriangle/base/background";
+
+@import "atriangle/element/orbit";
+
+@import "atriangle/element/footer";
+
+@import "atriangle/element/header";
