--- a/_source/_layouts/default.html
+++ b/_source/_layouts/default.html
@@ -9,23 +9,17 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="assets/css/foundation.min.css">
+  <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/app.css">
   <!--[if lt IE 9]>
     <script src="js/shiv.js"></script>
   <![endif]-->
 </head>
 <body>
-		
-<div class="row">
-
+    
 {% include nav.html %}
-  
 
-</div>
-
-
-<div class="row">
+<div class="row wrapper">
 
  
   {{ content }} 
@@ -51,11 +45,14 @@
   <script src="assets/js/app.js"></script>
 
   
-    <script>
-    $(window).load(function(){
-      $("#featured").orbit();
-    });
-    </script> 
+<script>
+$(window).load(function(){
+  $("#featured").orbit({
+    bulletThumbs: true
+  });
+});
+</script> 
+
   
 
 </body>
