--- a/scss/foundation/_settings.scss
+++ b/scss/foundation/_settings.scss
@@ -10,8 +10,8 @@ $blockGridElements: 12 !default; // Highest number of block grid elements, Maxim
 
 // Colors Settings
 
-$mainColor: #2ba6cb !default;
-$secondaryColor: #e9e9e9 !default;
+$mainColor: #0c009e !default;
+$secondaryColor: #50498F !default;
 $alertColor: #c60f13 !default;
 $successColor: #5da423 !default;
 $txtColor: #222 !default;
@@ -120,17 +120,17 @@ $navBarTouchFlyoutBorderColor: #666 !default;
 
 // Top Bar Settings
 
-$topBarBgColor: #222 !default;
+$topBarBgColor: #fff !default;
 $topBarHeight: 45px !default;
 $topBarHeightMobile: 45px !default;
-$topBarBtmMargin: 30px !default;
+$topBarBtmMargin: 0px !default;
 $topBarTitleWeight: bold !default;
-$topBarTitleSize: 17px !default;
-$topBarLinkColor: #fff !default;
+$topBarTitleSize: 30px !default;
+$topBarLinkColor: #002892 !default;
 $topBarLinkWeight: bold !default;
 $topBarLinkSize: 13px !default;
-$topBarDropBgColor: #222 !default;
-$topBarDropLinkColor: #fff !default;
+$topBarDropBgColor: #fff !default;
+$topBarDropLinkColor: #002892 !default;
 $topBarDropToggleSize: 5px !default;
 $topBarDropToggleColor: #fff !default;
 $topBarDropToggleAlpha: 0.5 !default;
