--- a/_source/_includes/nav.html
+++ b/_source/_includes/nav.html
@@ -1,58 +1,69 @@
+<div class="row hide-on-tablet head-top">
+  <div id="HeaderSocial" class="column">
+    <ul class="block-grid five-up" >
+      <li class="fb"><a href="http://www.facebook.com/CablevisionCareers" target="blank" >FaceBook</a></li>
+      <li class="twitter"><a href="http://www.twitter.com/CVCCareers" target="blank" o>Twitter</a></li>
+      <li class="linked"><a href="http://www.linkedin.com/company/cablevision" target="blank" >LinkedIn</a></li>
+      <li class="youtube"><a href="http://www.youtube.com/user/optimumbrandvideos" target="blank" >Youtube</a></li>
+      <li class="mail"><a href="/contact-us/">Mail</a></li>
+    </ul>
+  </div>
+  <div class="column search-field">
+    <input placeholder="Search The CQ" type="search">
+    <button class="button small round">Search</button>
+  </div>
+</div>
 <div class="row">
-  <div class="column"> 
-    <a href="index.html">
-      <h1>Cable Vision</h1>
+  <div class="two column header-logo">
+    <a href="index.html" class="text-right">
+      <img src="assets/images/logo/cq-logo.png" alt="Cable Vision">
     </a>
+  </div>
+  <div class="ten column">
+    <ul class="nav-bar top-bar hide-on-phones " id="mainNav">
+      <li class="has-flyout">
+        <a href="#" class="main">Empowering Employees</a>
+        <a href="#" class="flyout-toggle"><span></span></a>
+        <div class="flyout small">
+          <ul class="dropdown">
+            <li><a href="category.html">The 411 on...</a></li>
+            <li><a href="category.html">Taking Advantage Of</a></li>
+            <li><a href="category.html">Align My Goals</a></li>
+            <li><a href="category.html">Educate and Train</a></li>
+          </ul>
+        </div>
+      </li>
+      <li class="has-flyout">
+        <a href="#" class="main">Business Smarts</a>
+        <a href="#" class="flyout-toggle"><span></span></a>
+        <div class="flyout small">
+          <ul class="dropdown">
+            <li><a href="category.html">Our Exciting Products & Technologies</a></li>
+            <li><a href="category.html">Around the Company</a></li>
+            <li><a href="category.html">Reaching our Customers</a></li>
+            <li><a href="category.html">Did You Know?</a></li>
+          </ul>
+        </div>
+      </li>
+      <li class="has-flyout">
+        <a href="#" class="main">Our Amazing People</a>
+        <a href="#" class="flyout-toggle"><span></span></a>
+        <div class="flyout small">
+          <ul class="dropdown">
+            <li><a href="category.html">Hometown Heroes</a></li>
+            <li><a href="category.html">Top Performers and Teams</a></li>
+            <li><a href="category.html">Innovators</a></li>
+            <li><a href="category.html">Awards and Recognition</a></li>
+          </ul>
+        </div>
+      </li>
+    </ul>
   </div>
 </div>
 <span class="show-on-phones">
   <p>
-    <a href="" id="sidebarButton" class="twelve button">Main Menu</a>
+    <a href="" id="sidebarButton" class="twelve button sidebarButtonSpan">Menu</a>
   </p>
 </span>
-<span class="hide-on-phones">
-<ul class="nav-bar top-bar hide-on-phones" id="mainNav">
-  <li>
-    <a class="main" href="index.html">Home</a>
-  </li>
-  <li class="has-flyout">
-    <a href="#" class="main">Empowering Employees</a>
-    <a href="#" class="flyout-toggle"><span></span></a>
-    <div class="flyout small">
-      <ul class="dropdown">
-        <li><a href="category.html">The 411 on...</a></li>
-        <li><a href="category.html">Taking Advantage Of</a></li>
-        <li><a href="category.html">Align My Goals</a></li>
-        <li><a href="category.html">Educate and Train</a></li>
-      </ul>
-    </div>
-  </li>
-  <li class="has-flyout">
-    <a href="#" class="main">Business Smarts</a>
-    <a href="#" class="flyout-toggle"><span></span></a>
-    <div class="flyout small">
-      <ul class="dropdown">
-        <li><a href="category.html">Our Exciting Products & Technologies</a></li>
-        <li><a href="category.html">Around the Company</a></li>
-        <li><a href="category.html">Reaching our Customers</a></li>
-        <li><a href="category.html">Did You Know?</a></li>
-      </ul>
-    </div>
-  </li>
-  <li class="has-flyout">
-    <a href="#" class="main">Our Amazing People</a>
-    <a href="#" class="flyout-toggle"><span></span></a>
-    <div class="flyout small">
-      <ul class="dropdown">
-        <li><a href="category.html">Hometown Heroes</a></li>
-        <li><a href="category.html">Top Performers and Teams</a></li>
-        <li><a href="category.html">Innovators</a></li>
-        <li><a href="category.html">Awards and Recognition</a></li>
-      </ul>
-    </div>
-  </li>
-  <li class="hide-on-tablets"><input type="search"></li>
-</ul>
+<span class="hide-on-phones border-bottom ">
 </span>
-
-
