--- a/_source/assets/css/atriangle/element/nav.css
+++ b/_source/assets/css/atriangle/element/nav.css
@@ -1,5 +1,4 @@
 /* line 3, ../../../../../scss/atriangle/element/nav.scss */
-.contain-to-grid {
+.border-bottom {
   border-bottom: 10px solid #50498f;
-  margin-bottom: 1em;
 }
