--- a/scss/_foundation/_orbit.scss
+++ b/scss/_foundation/_orbit.scss
@@ -117,11 +117,11 @@ div.orbit-wrapper span.pause.active {
     z-index: 30;
     color: #fff;
     text-align: center;
-    padding: 7px 0;
-    font-size: 13px;
+    padding: 13px 0;
+    font-size: 23px;
     position: absolute;
     right: 0;
-    bottom: 0;
+    bottom: 15%;
     width: 100%; }
 
 
