--- a/scss/atriangle/element/nav.scss
+++ b/scss/atriangle/element/nav.scss
@@ -1,6 +1,5 @@
 $secondaryColor: #50498F !default;
 
-.contain-to-grid{
+.border-bottom{
   border-bottom: 10px solid $secondaryColor;
-  margin-bottom: 1em;
 }
