--- a/scss/style.scss
+++ b/scss/style.scss
@@ -40,6 +40,8 @@
 
 @import "atriangle/element/story-cta";
 
+@import "atriangle/element/post-add";
+
 @import "atriangle/element/footer";
 
 @import "atriangle/element/header";
