--- a/_source/_includes/footer.html
+++ b/_source/_includes/footer.html
@@ -1,47 +1,47 @@
 <div id="footer" class="footer column twelve">
   <div class="row">
-    <div class="three column">
-            <h4 style=""><small>Empowering Employees</small></h4>
-            <ul class="">
-              <li><a href="category.html">The 411 on...</a></li>
-              <li><a href="category.html">Taking Advantage Of</a></li>
-              <li><a href="category.html">Align My Goals</a></li>
-              <li><a href="category.html">Educate and Train</a></li>
-            </ul>
+    <div class="column hide-for-tablets" style="max-width: 13%;">
+
+      <a href="index.html" class="text-right">
+        <img src="assets/images/logo/cq-logo-white.png" alt="Cable Vision">
+      </a>
     </div>
-    <div class="three column">
-            <h4 ><small>Business Smarts</small></h4>
-            <ul class="">
-              <li><a href="category.html">Our Exciting Products & Technologies</a></li>
-              <li><a href="category.html">Around the Company</a></li>
-              <li><a href="category.html">Reaching our Customers</a></li>
-              <li><a href="category.html">Did You Know?</a></li>
-            </ul>
-      
+    <div class="column">
+      <div class="row">
+        <a href="#"><strong>Sections: </strong></a>
+        <a href="#" class="main">Home</a> /
+        <a href="#" class="main">Line Item</a> /
+        <a href="#" class="main">Line Item</a> /
+        <a href="#" class="main">Line Item</a> /
+        <a href="#" class="main">Line Item</a>
+      </div>
+      <div class="row"> 
+        <a href="#" class="main"><strong>Empowering Employees</strong></a> /
+        <a href="category.html">The 411 on...</a> /
+        <a href="category.html">Taking Advantage Of</a> /
+        <a href="category.html">Align My Goals</a> /
+        <a href="category.html">Educate and Train</a> 
+      </div>
+      <div class="row">  
+        <a href="#" class="main"><strong>Business Smarts</strong></a> /
+        <a href="category.html">Our Exciting Products & Technologies</a> /
+        <a href="category.html">Around the Company</a> /
+        <a href="category.html">Reaching our Customers</a> /
+        <a href="category.html">Did You Know?</a>
+      </div>
+      <div class="row">  
+        <a href="#" class="main"><strong>Our Amazing People</strong></a>
+        <a href="contact.html">Submit Story</a> /
+        <a href="contact.html">Contact Editor</a> /
+        <a href="contact.html">Ask Question</a>
+      </div>
     </div>
-    <div class="three column">
-      <h4><small>
-      Our Amazing People
-      </small></h4>
-      <ul class="">
-        <li><a href="category.html">Hometown Heroes</a></li>
-        <li><a href="category.html">Top Performers and Teams</a></li>
-        <li><a href="category.html">Innovators</a></li>
-        <li><a href="category.html">Awards and Recognition</a></li>
-      </ul>
-    </div>
-    <div class="three column">
-      <h4><small>Contact</small></h4>
-      <ul>
-        <li> <a href="contact.html">Submit Story</a> </li>
-        <li> <a href="contact.html">Contact Editor</a> </li>
-        <li> <a href="contact.html">Ask Question</a> </li>
-      </ul>
-    </div>
+    <div class="column"></div>
   </div>
+  <hr>
   <div class="row">
     <div class="column centered text-center">
-      <p style="text-align:center;"><a href="">© Cable Vision</a></p>
+      <p><a href="">© Copyright 2013 CSC Holdings, LLC.Copyright</a> <a href="">Policy</a>|<a href="">Privacy Policy</a></p>
     </div>
   </div>
 </div>
