--- a/_source/_includes/orbit.html
+++ b/_source/_includes/orbit.html
@@ -1,5 +1,12 @@
-<div id="featured"> 
-  <img src="assets/images/thumb/feat1.jpg" data-thumb="thumb1.jpg" class="twelve"/>
-  <img src="assets/images/thumb/feat2.jpg" data-thumb="thumb2.jpg" class="twelve"/>
-  <img src="assets/images/thumb/feat3.jpg" data-thumb="thumb3.jpg" class="twelve"/>
+<div class="row">
+  <div class="column twelve">
+    <div id="featured"> 
+      <img src="assets/images/thumb/feat1.jpg" data-thumb="thumb1.jpg" class="twelve" data-caption="#feat1cap"/>
+      <img src="assets/images/thumb/feat2.jpg" data-thumb="thumb2.jpg" class="twelve" data-caption="#feat2cap"/>
+      <img src="assets/images/thumb/feat3.jpg" data-thumb="thumb3.jpg" class="twelve" data-caption="#feat3cap"/>
+    </div>
+    <span class="orbit-caption" id="feat1cap">Post #1 Title</span>
+    <span class="orbit-caption" id="feat2cap">Post #2 Title</span>
+    <span class="orbit-caption" id="feat3cap">Post #3 Title</span>
+  </div>
 </div>
