--- a/_source/assets/css/atriangle/base/layout.css
+++ b/_source/assets/css/atriangle/base/layout.css
@@ -1,5 +1,10 @@
 /* line 3, ../../../../../scss/atriangle/base/layout.scss */
-#main, #footer {
+#main, #footer, .sidebarButtonSpan {
   padding-left: 2.2%;
   padding-right: 2.2%;
+}
+
+/* line 8, ../../../../../scss/atriangle/base/layout.scss */
+#main {
+  margin-top: 1em;
 }
