--- a/scss/_foundation/_ui.scss
+++ b/scss/_foundation/_ui.scss
@@ -1,6 +1,6 @@
 /* Artfully masterminded by ZURB  */
 
-
+$secondaryColor: #50498F !default;
 
 /* --------------------------------------------------
    Table of Contents
@@ -261,9 +261,9 @@
    	Nav Bar with Dropdowns
 	-------------------------------------------------- */
 	
-	.nav-bar { height: 45px; background: #fff; margin-top: 20px; border: 1px solid #ddd; }	
-	.nav-bar>li { float: left; display: block; position: relative; padding: 0; margin: 0; border-right: 1px solid #ddd; line-height: 45px; }
-	.nav-bar>li>a.main { position: relative; padding: 0 20px; display: block; text-decoration: none; font-size: 15px; font-size: 1.5rem; }
+	.nav-bar { height: 45px; background: #fff; margin-top: 0px; border: 0px solid #ddd; margin-bottom: 0em;}	
+	.nav-bar>li { float: left; display: block; position: relative; padding: 0; margin: 0; border-right: 0px solid #ddd; line-height: 45px; }
+	.nav-bar>li>a.main { position: relative; padding: 0 15px; display: block; text-decoration: none; font-size: 15px; font-size: 1.5rem; font-weight: bold; text-transform: uppercase; color: $secondaryColor; }
 	.nav-bar>li>input { margin: 0 16px; }
 	.nav-bar>li>input.input-text { display: inline-block; }
 	.nav-bar>li ul { margin-bottom: 0; }
