--- a/scss/atriangle/element/footer.scss
+++ b/scss/atriangle/element/footer.scss
@@ -1,4 +1,4 @@
-.footer{
+#footer{
   padding-top: 1.5em;
   background: rgb(29, 29, 29);
   h2{
@@ -7,5 +7,8 @@
   }
   a{
     color: rgb(149, 149, 149);
+  }
+  hr{
+    border-color: #959595;
   }
 }
