Change thumbnail height

--- a/_source/_includes/nav.html
+++ b/_source/_includes/nav.html
@@ -2,7 +2,7 @@
   <div id="HeaderSocial" class="column">
     <ul class="block-grid five-up" >
       <li class="fb"><a href="http://www.facebook.com/CablevisionCareers" target="blank" >FaceBook</a></li>
-      <li class="twitter"><a href="http://www.twitter.com/CVCCareers" target="blank" o>Twitter</a></li>
+      <li class="twitter"><a href="http://www.twitter.com/CVCCareers" target="blank">Twitter</a></li>
       <li class="linked"><a href="http://www.linkedin.com/company/cablevision" target="blank" >LinkedIn</a></li>
       <li class="youtube"><a href="http://www.youtube.com/user/optimumbrandvideos" target="blank" >Youtube</a></li>
       <li class="mail"><a href="/contact-us/">Mail</a></li>
@@ -20,6 +20,9 @@
     </a>
   </div>
   <div class="ten column">
+    <strong>
+      
+    </strong>
     <ul class="nav-bar top-bar hide-on-phones " id="mainNav">
       <li class="has-flyout">
         <a href="#" class="main">Empowering Employees</a>
@@ -60,10 +63,10 @@
     </ul>
   </div>
 </div>
-<span class="show-on-phones">
+<div class="show-on-phones">
   <p>
     <a href="" id="sidebarButton" class="twelve button sidebarButtonSpan">Menu</a>
   </p>
-</span>
-<span class="hide-on-phones border-bottom ">
-</span>
+</div>
+<div class="hide-on-phones border-bottom ">
+</div>
