--- a/_source/_layouts/default.html
+++ b/_source/_layouts/default.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 
-<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
-<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
-<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
-<!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<html class="no-js lt-ie9 lt-ie8" lang="en"> 
 <head>
   <meta charset="utf-8">
 
@@ -21,16 +17,12 @@
 
   <link href='http://fonts.googleapis.com/css?family=Fenix|Oswald:400,700|Roboto:400,500,400italic,500italic' rel='stylesheet' type='text/css'>
 
-  <!--[if lt IE 9]>
-    <link rel="stylesheet" href="assets/css/ie.css">
-  <![endif]-->
+  <link rel="stylesheet" href="assets/css/ie.css">
   
   <script src="assets/js/modernizr.foundation.js"></script>
 
-  <!-- IE Fix for HTML5 Tags -->
-  <!--[if lt IE 9]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
+
+  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 
 </head>
 <body>
