--- a/scss/_foundation/_orbit.scss
+++ b/scss/_foundation/_orbit.scss
@@ -220,9 +220,8 @@ ul.orbit-bullets li {
 ul.orbit-bullets li.has-thumb {
     background: none;
     width: #{$third}% !important;
-    min-height: 170px;
-    height: 170px;
-    background-size: contain !important; }
+    height: 100px;
+    }
 
 ul.orbit-bullets li.active {
     color: #222; 
