--- a/_source/_includes/nav.html
+++ b/_source/_includes/nav.html
@@ -16,7 +16,7 @@
 <div class="row">
   <div class="two column header-logo">
     <a href="index.html" class="text-right">
-      <img src="assets/images/logo/cq-logo.png" alt="Cable Vision">
+      <img src="assets/images/logo/cq-logo.png" alt="Cable Vision" style="width: 122px !important;">
     </a>
   </div>
   <div class="ten column">
