--- a/_source/_includes/orbit.html
+++ b/_source/_includes/orbit.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row"  id="main">
   <div class="column twelve">
     <div id="featured"> 
       <img src="assets/images/thumb/feat1.jpg" data-thumb="thumb1.jpg" class="twelve" data-caption="#feat1cap"/>
