--- a/_source/_layouts/default.html
+++ b/_source/_layouts/default.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 
-<html class="no-js lt-ie9 lt-ie8" lang="en"> 
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
 
@@ -17,12 +21,16 @@
 
   <link href='http://fonts.googleapis.com/css?family=Fenix|Oswald:400,700|Roboto:400,500,400italic,500italic' rel='stylesheet' type='text/css'>
 
-  <link rel="stylesheet" href="assets/css/ie.css">
+  <!--[if lt IE 9]>
+    <link rel="stylesheet" href="assets/css/ie.css">
+  <![endif]-->
   
   <script src="assets/js/modernizr.foundation.js"></script>
 
-
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <!-- IE Fix for HTML5 Tags -->
+  <!--[if lt IE 9]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
 
 </head>
 <body>
