--- a/_source/assets/css/style.css
+++ b/_source/assets/css/style.css
@@ -3574,29 +3574,31 @@ ul.orbit-bullets li {
 ul.orbit-bullets li.has-thumb {
   background: none;
   width: 33.33333% !important;
-  height: 100px;
+  min-height: 170px;
+  height: 170px;
+  background-size: contain !important;
 }
 
-/* line 226, ../../../scss/_foundation/_orbit.scss */
+/* line 227, ../../../scss/_foundation/_orbit.scss */
 ul.orbit-bullets li.active {
   color: #222;
   background-position: center !important;
   border: none !important;
 }
 
-/* line 232, ../../../scss/_foundation/_orbit.scss */
+/* line 233, ../../../scss/_foundation/_orbit.scss */
 ul.orbit-bullets li.active.has-thumb {
   background-position: center !important;
   opacity: 1;
 }
 
 /* Correct timer in IE */
-/* line 239, ../../../scss/_foundation/_orbit.scss */
+/* line 240, ../../../scss/_foundation/_orbit.scss */
 .timer {
   display: none !important;
 }
 
-/* line 240, ../../../scss/_foundation/_orbit.scss */
+/* line 241, ../../../scss/_foundation/_orbit.scss */
 div.caption {
   background: transparent;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000,endColorstr=#99000000);
@@ -3771,7 +3773,7 @@ Example markup
   /* line 26, ../../../scss/_foundation/_offcanvas.scss */
   body.active #sidenav {
     position: absolute;
-    top: 110px;
+    top: 249px;
     margin-right: 100%;
     width: 80%;
   }
