--- a/scss/_foundation/_orbit.scss
+++ b/scss/_foundation/_orbit.scss
@@ -220,8 +220,9 @@ ul.orbit-bullets li {
 ul.orbit-bullets li.has-thumb {
     background: none;
     width: #{$third}% !important;
-    height: 100px;
-    }
+    min-height: 170px;
+    height: 170px;
+    background-size: contain !important; }
 
 ul.orbit-bullets li.active {
     color: #222; 
